# whatalang

./: .gitignore  .gitmodules  CNAME  PUBLISHING.md  README.md  example.what  pyproject.toml  requirements.txt
.cursor/: README.md
.cursor/rules/: cli-ux.mdc  code-style.mdc  core-architecture.mdc  development-workflow.mdc  reactive-system.mdc
.github/workflows/: deploy.yml
docs/: README.md  hugo.dev.toml  hugo.toml
docs/content/: _index.md
docs/content/docs/: _index.md
docs/content/examples/: _index.md
docs/content/features/: _index.md
docs/content/getting-started/: _index.md
docs/layouts/: section.html
docs/public/: 404.html  index.html  index.xml  robots.txt  sitemap.xml
docs/public/categories/: index.html  index.xml
docs/public/css/: config.min.css  config.min.css.map  style.min.css.map
docs/public/docs/: index.html  index.xml
docs/public/examples/: index.html  index.xml
docs/public/features/: index.html  index.xml
docs/public/getting-started/: index.html  index.xml
docs/public/series/: index.html  index.xml
docs/public/tags/: index.html  index.xml
docs/static/: CNAME
src/: __init__.py  grammar.py  reactive.py
src/parser/: __init__.py
src/state/: __init__.py
tests/: test_lexer.py  test_parser.py  test_reactive_engine.py  test_reactive_parser.py  test_state.py
whatalang/: __init__.py  cli.py  grammar.py  lexer.py  parser.py  state.py
