[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whatalang"
version = "1.0.0"
description = "A reactive programming language"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Whatalang Team", email = "team@whatalang.dev"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
whatalang = "whatalang.cli:main"

[project.urls]
Homepage = "https://github.com/whatalang/whatalang"
Repository = "https://github.com/whatalang/whatalang"
Documentation = "https://whatalang.dev"
Issues = "https://github.com/whatalang/whatalang/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["whatalang*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
